--- a/README
+++ b/README
@@ -1,11 +1,8 @@
-Copyright (C) 2002-2013 FlyMine
+TargetMine Source Distributions
+--------------------------------
+
 See LICENSE file for licensing information.
 
-This product includes software developed by the
-Apache Software Foundation (http://www.apache.org/).
+TargetMine requires the InterMine library. A modified version of InterMine is included in this distribution.
+See the files README.intermine, LICENCE.intermine and LICENSE.intermine.LIBS for InterMine licensing information.
 
-*************************************************************************
-* In order to improve the chance of continued funding for the InterMine *
-* project it would be appreciated if groups that use InterMine or parts *
-* of InterMine would let us know (email info[at]flymine.org).           *
-*************************************************************************
